2012-12-12  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 1.13.1.
	* build.xml (version.release): Likewise.

2012-12-08  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 1.13.
	* build.xml (version.release): Likewise.

2012-11-21  Per Bothner  <per@bothner.com>

	* configure.in: Try harder to find jfxrt.jar.

	* Makefile.am (+DISTCLEANFILES): New macro - add selected-java-source.
	(selected-java-source, set-selected-java-source): Change
	selected-java-source to be in current directory, not srcdir.

2012-07-28  Per Bothner  <per@bothner.com>

	* configure.in: Don't default to with-httpserver or Java6
	if configured for Android.

2012-07-10  Per Bothner  <per@bothner.com>

	* build.xml (xml-classes): Added Xutils.scm.

2012-07-03  Per Bothner  <per@bothner.com>

	* build.xml: Some cleanups for with-awt dependeny, which
	should benefit Android.

2012-05-31  Per Bothner  <per@bothner.com>

	* configure.in: Change argument to --with-javafx to be actual jfxrt.jar
	though also supporting old meaning.
	Also a fix for servlet path.

2012-05-30  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 1.12.1.
	* build.xml (version.release): Likewise.

2012-05-28  Per Bothner  <per@bothner.com>

	* Makefile.am (dist-kawa-@VERSION@.jar): Build with javafx support.
	* configure.in: Related changes.

2012-05-24  Jacques Herry

	* build.xml (jar): Fix.

2012-05-25  Per Bothner  <per@bothner.com>

	* configure.in (WITH_SERVLET_ARG): New variable.
	* Makefile.am (dist-kawa-@VERSION@.jar): Include serlet jar's
	location in build classpath.

	* Makefile.am: Use CLASSPATH_SEPARATOR for the sake of CygWin.

2012-05-20  Jacques Herry

	* build.xml: Fix to build META_INFO/services.

2012-05-20  Jamison Hope  <jrh@theptrgroup.com>

	* build.xml: "Inline" named filesets lib-scm and slib-scm to their
	point of use, fixing a problem where the filesets depend on
	with-swing, which is used before it is set in build-settings.