@@ -1,3 +1,7 @@
+2012-12-14  Jamison Hope  <jrh@theptrgroup.com>
+
+       * Kawac.java: Add support for FileList.
+
 2012-12-15  Per Bothner  <per@bothner.com>
 
 	* LineStripperSet.java (class LineStripper): Make extend Filter.
